--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -3,7 +3,12 @@
     justify-content: space-between;
     align-items: center;
     padding: 0.5rem;
-    background-color: #fff;
+    background-color: #696D7D;
     border-bottom: 1px solid #e6e6e6;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.08);
+    .logo{
+        width: 75px;
+        margin: 5px;
+    }
 }
+
