--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -3,8 +3,8 @@
     justify-content: space-between;
     align-items: center;
     padding: 0.5rem;
-    background-color: #696D7D;
-    border-bottom: 1px solid #e6e6e6;
+    background-color: #1e1b1e;
+    border-bottom: 1px solid #1e1b1e;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.08);
     .logo{
         width: 75px;
