--- a/src/components/pages/profile-setup.scss
+++ b/src/components/pages/profile-setup.scss
@@ -9,6 +9,8 @@
   padding: 20px;
   margin-bottom: 20px;
   margin-right: 15px;
+  z-index: 1;
+  border: 3px solid #ffaa0d;
   img{
     width: 150px;
     height: 150px;
@@ -27,4 +29,14 @@
   overflow: scroll;
   height: calc(100vh - 200px);
   margin-top: 10px;
+}
+
+.stepper {
+  margin-top: 5px;
+  z-index: 1;
+}
+
+.card_container {
+  // padding-top: 5px;
+  background-color: black;
 }
