--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -13,5 +13,11 @@
     .title{
         height: 75px;
     }
+    .logo-title-container{
+        display: flex;
+    }
+    span {
+        padding-right: 1rem;
+    }
 }
 
