--- a/src/components/pages/HomePage.scss
+++ b/src/components/pages/HomePage.scss
@@ -9,7 +9,7 @@
         display: flex;
         justify-content: space-around;
     }
-    .css-gwd4s4-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root{
+    .MuiSelect-select{
         background-color: #2291a4;
         color: #1e1b1e;
         border: 3px solid #ffaa0d;
